Fix a bug in disambiguation popup

The reported bug was caused by http://crrev.com/497292 that
refactors the popup zoomer used for tap disambiguation. This CL
fixes it by scaling the touch event coordinate correctly before
sending it to Blink.

Bug: 763553
Change-Id: Ib0ab717daaf21018ed16c88a5fb3b69a768156a6
Reviewed-on: https://chromium-review.googlesource.com/658203
Commit-Queue: Jinsuk Kim <jinsukkim@chromium.org>
Reviewed-by: Bo <boliu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501069}
Former-commit-id: aa2555e0238d9037c616387e3754bced50a906e8